Added a bear and chicken and some other elements

--- a/test-again.html
+++ b/test-again.html
@@ -1,3 +1,19 @@
-<h1>Hey I am medo, a BIG Bear!</h1>
-<p>Hey, ja sam slatka kokica! Cool huuh!</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'll lead you to Google!</a>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Bear and chicken test page</title>
+</head>
+
+<body></body>
+	<h1>Hey I am medo, a BIG Bear!</h1>
+	<p>Hey, ja sam slatka <b>kokica</b>! Cool huuh!</p>
+	<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'll lead you to Google!</a>
+	<p>
+		We are:<br>
+		Bear and Chicken!
+	</p>
+	<img src="https://cdn.vectorstock.com/i/1000x1000/81/75/bear-and-chicken-cartoon-design-vector-26988175.webp">
+</body>
+
+</html>
